Solved clipping event dots at small width screen

--- a/assets/style.css
+++ b/assets/style.css
@@ -697,7 +697,7 @@ select option:hover {
 
   .event{
     width: 0px;
-    height: 20px;
+    height: 10px;
     font-size: 20px;
     margin: 0;
     margin-bottom: -5px;
